--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </a>
     </div>
     <div class="main__content2">
-      <video controls muted>
+      <video controls>
         <source src="./src/video/1005.mp4" type="video/mp4">
       </video>
     </div>
@@ -371,4 +371,5 @@
   </footer>
   <script src="./src/script/script.js"></script>
 </body>
+
 </html>
